--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand" href="#">Ramy Ayman</a>
+      <a class="navbar-brand" href="#">Mohamed Tamaa</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
@@ -55,13 +55,13 @@
             </div>
             <div class="sec-side text-center">
                 <div class="content">
-                    <img src="img/WhatsApp%20Image%202021-01-18%20at%201.14.37%20AM.jpeg" style="width: 150px; height: 150px;">
-                    <h1>Ramy Ayman</h1>
-                    <p>iOS Developer</p>
+                    <img src="img/IMG_5824.JPG" style="width: 150px; height: 150px;">
+                    <h1>Mohamed Tamaa</h1>
+                    <p>Front-End Developer</p>
                     <ul>
-                        <li><a href="https://www.linkedin.com/in/ramy-aiman-sabry-153770117/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                        <li><a href="https://www.facebook.com/profile.php?id=100008612291509" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="https://github.com/ramysabry22" target="_blank"><i class="fab fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/mohamed-tamaa-ba0409168/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="https://www.facebook.com/mohamdtamaa" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://github.com/tamaa011" target="_blank"><i class="fab fa-github"></i></a></li>
                     </ul>
                     <div class="bt"><button class="btn"><a href="https://github.com/ramysabry22/Cv/raw/master/CV/Ramy_Sabry_iOS_Developer_CV.pdf">Download CV</a></button></div>
                     <div class="footer"><p>&copy; 2021 All rights reserved</p></div>
@@ -74,14 +74,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 col-xl-5 pic">
-                        <img src="img/WhatsApp%20Image%202021-01-18%20at%201.14.37%20AM.jpeg"/>
+                        <img src="img/IMG_5824.JPG"/>
                     </div>
                     <div class="col-md-4 text" >
-                        <h4>iOS Developer</h4>
-                        <h1>Ramy Ayman</h1>
-                        <p>Passionate iOS Developer, loves to build mobile apps, growing in clean
-                        code writing and using architectural and design patterns to provide
-                        robust software</p>
+                        <h4>Front-End Developer</h4>
+                        <h1>Mohamed Tamaa</h1>
+                        <p>As a front-end web developer who combines the art of design with the art of programming. I am well trained on utilizing visual elements of user interface design, UX design fundamentals, strategy and information architecture of web design and wireframe of prototype</p>
                         <div class="bt-two">
                             <a class="btn-one" href="https://github.com/ramysabry22/Cv/raw/master/CV/Ramy_Sabry_iOS_Developer_CV.pdf">Download CV</a>
                             <a class="btn-two contact-c" href="#">Contact</a>
@@ -94,18 +92,44 @@
     <section class="work-examples hidden wow slideInRight" data-wow-duration="1s">
             <h1 class="m">Work Examples</h1>
             <div class="work">
-                <h2>Work</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
-                <video width="100%" controls>
-                <source src="img/sbs.mp4" type="video/mp4">
-                <source src="img/sbs.mp4" type="video/ogg">
-                </video>
-                <h2>Work</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
-                <video width="100%" controls>
-                <source src="img/sbs.mp4" type="video/mp4">
-                <source src="img/sbs.mp4" type="video/ogg">
-                </video>
+                <div class="row">
+                    <div class="col-md-6 col-xs-12">
+                        <div class="card-work">
+                            <h1 class="corner">Responsive</h1>
+                          <img src="img/smart.png" alt="Smart Computing" style="width:100%">
+                          <h1>Smart Computing</h1>
+                          <p>Static Website to a Company to show their work in this website. Contain 3 pages with animation.</p>
+                          <p><a href="https://tamaa011.github.io/smart-computing.github.io/" target="_blank"><button>Visit Website</button></a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xs-12">
+                        <div class="card-work">
+                            <h1 class="corner-not">Not Responsive</h1>
+                          <img src="img/smart2.png" alt="Smart Computing" style="width:100%">
+                          <h1>Smart Computing</h1>
+                          <p>Static Website to a Company to show their work in this website. Contain 4 pages.</p>
+                          <p><a href="https://tamaa011.github.io/smart.computing.github.io/" target="_blank"><button>Visit Website</button></a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xs-12">
+                        <div class="card-work">
+                            <h1 class="corner">Responsive</h1>
+                          <img src="img/groom.png" alt="Groom and Bride" style="width:100%">
+                          <h1>Groom &amp; Bride</h1>
+                          <p>collect all data of palaces that manage the wedding day, photography, videography, makeup artists and car rent (prototype).</p>
+                          <p><a href="https://tamaa011.github.io/smart-computing.github.io/" target="_blank"><button>Visit Website</button></a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xs-12">
+                        <div class="card-work">
+                            <h1 class="corner">Responsive</h1>
+                          <img src="img/smart.png" alt="Smart Computing" style="width:100%">
+                          <h1>Smart Computing</h1>
+                          <p>Static Website to a Company to show their work in this website. Contain 3 pages with animation.</p>
+                          <p><a href="https://tamaa011.github.io/smart-computing.github.io/" target="_blank"><button>Visit Website</button></a></p>
+                        </div>
+                    </div>
+                </div>
             </div>
     </section>
     <section class="cv hidden hidden-xs wow slideInRight" data-wow-duration="1s">
