--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                         <img src="img/IMG_5824.JPG"/>
                     </div>
                     <div class="col-md-4 text" >
-                        <h4>Front-End Developer</h4>
+                        <h4 id="text-one">Front-End Developer</h4>
+                        <h4 id="text-two" class="hidden">Web Designer</h4>
                         <h1>Mohamed Tamaa</h1>
                         <p>As a front-end web developer who combines the art of design with the art of programming. I am well trained on utilizing visual elements of user interface design, UX design fundamentals, strategy and information architecture of web design and wireframe of prototype</p>
                         <div class="bt-two">
@@ -91,6 +92,7 @@
     </section>
     <section class="work-examples hidden wow slideInRight" data-wow-duration="1s">
             <h1 class="m">Work Examples</h1>
+            <h3 class="m">As a front-end web developer, I developed 17 websites many of them are responsive with all screens and dynamic website </h3>
             <div class="work">
                 <div class="row">
                     <div class="col-md-6 col-xs-12">
@@ -117,16 +119,52 @@
                           <img src="img/groom.png" alt="Groom and Bride" style="width:100%">
                           <h1>Groom &amp; Bride</h1>
                           <p>collect all data of palaces that manage the wedding day, photography, videography, makeup artists and car rent (prototype).</p>
-                          <p><a href="https://tamaa011.github.io/smart-computing.github.io/" target="_blank"><button>Visit Website</button></a></p>
+                          <p><a href="https://tamaa011.github.io/tamaaa.github.io/" target="_blank"><button>Visit Website</button></a></p>
                         </div>
                     </div>
                     <div class="col-md-6 col-xs-12">
                         <div class="card-work">
                             <h1 class="corner">Responsive</h1>
-                          <img src="img/smart.png" alt="Smart Computing" style="width:100%">
-                          <h1>Smart Computing</h1>
-                          <p>Static Website to a Company to show their work in this website. Contain 3 pages with animation.</p>
-                          <p><a href="https://tamaa011.github.io/smart-computing.github.io/" target="_blank"><button>Visit Website</button></a></p>
+                          <img src="img/sbs.png" alt="SBS" style="width:100%">
+                          <h1>SBS</h1>
+                          <p>Static Website to a student activity in ACU to show their work in this website. Contain 4 pages with animations.</p>
+                          <p><a href="https://tamaa011.github.io/stepbystep.github.io/" target="_blank"><button>Visit Website</button></a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xs-12">
+                        <div class="card-work">
+                            <h1 class="corner">Responsive</h1>
+                          <img src="img/sbs2.png" alt="SBS" style="width:100%">
+                          <h1>SBS</h1>
+                          <p>Static Website to a student activity in ACU to show their work in this website. Contain 4 pages with animations and new design.</p>
+                          <p><a href="https://tamaa011.github.io/newsbs.github.io/" target="_blank"><button>Visit Website</button></a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xs-12">
+                        <div class="card-work">
+                            <h1 class="corner">Responsive</h1>
+                          <img src="img/inf.png" alt="Infinity" style="width:100%">
+                          <h1>Infinity</h1>
+                          <p>Static Website to a student activity in ACU to show their work in this website. Contain 4 pages with animations and new design in it.</p>
+                          <p><a href="https://tamaa011.github.io/infin.github.io/" target="_blank"><button>Visit Website</button></a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xs-12">
+                        <div class="card-work">
+                            <h1 class="corner">Responsive</h1>
+                          <img src="img/smartdash.png" alt="Smart Computing Dashboard" style="width:100%">
+                          <h1>Smart Dashboard</h1>
+                          <p>Control all entries of smart computing website.</p>
+                          <p><a href="https://tamaa011.github.io/smartadmin.github.io/" target="_blank"><button>Visit Website</button></a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xs-12">
+                        <div class="card-work">
+                            <h1 class="corner">Responsive</h1>
+                          <img src="img/groomdash.png" alt="Groom & Bride App Dashboard" style="width:100%">
+                          <h1>Groom App Dashboard</h1>
+                          <p>Control all entries of Groom &amp; Bride App.</p>
+                          <p><a href="https://tamaa011.github.io/temp.github.io/" target="_blank"><button>Visit Website</button></a></p>
                         </div>
                     </div>
                 </div>
