--- a/index.html
+++ b/index.html
@@ -162,13 +162,83 @@
                         <div class="card-work">
                             <h1 class="corner">Responsive</h1>
                           <img src="img/groomdash.png" alt="Groom & Bride App Dashboard" style="width:100%">
-                          <h1>Groom App Dashboard</h1>
+                          <h1>Groom Dashboard</h1>
                           <p>Control all entries of Groom &amp; Bride App.</p>
                           <p><a href="https://tamaa011.github.io/temp.github.io/" target="_blank"><button>Visit Website</button></a></p>
                         </div>
                     </div>
+        <div class="more">
+            <h1 class="m text-center">More Websites</h1>
+            <div class="row">
+                <div class="col-md-6 col-xs-12">
+                    <a href="https://ramysabry22.github.io/PortfolioWebsite.github.io/" target="_blank">
+                        <div class="card-more">
+                            <h1 class="corner">Responsive</h1>
+                            <img src="img/cv.png" alt="cv">
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 col-xs-12">
+                    <a href="https://tamaa011.github.io/hattrick.github.io/" target="_blank">
+                        <div class="card-more">
+                            <h1 class="corner">Responsive</h1>
+                            <img src="img/hat.png" alt="hat trick" style="width:100%">
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 col-xs-12">
+                    <a href="https://tamaa011.github.io/trust.github.io/" target="_blank">
+                        <div class="card-more">
+                            <h1 class="corner">Responsive</h1>
+                            <img src="img/trust.png" alt="trust" style="width:100%">
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 col-xs-12">
+                    <a href="https://tamaa011.github.io/tamaa.github.io/" target="_blank">
+                        <div class="card-more">
+                            <h1 class="corner">Responsive</h1>
+                            <img src="img/p.png" alt="peugeot " style="width:100%">
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 col-xs-12">
+                    <a href="https://tamaa011.github.io/pro3.github.io/" target="_blank">
+                        <div class="card-more">
+                            <h1 class="corner">Responsive</h1>
+                            <img src="img/pr.png" alt="Exspred " style="width:100%">
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 col-xs-12">
+                    <a href="https://tamaa011.github.io/project2.github.io/" target="_blank">
+                        <div class="card-more">
+                            <h1 class="corner-not">Not Responsive</h1>
+                            <img src="img/ty.png" alt="TYPIFY  " style="width:100%">
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 col-xs-12">
+                    <a href="https://tamaa011.github.io/myproject.github.io/" target="_blank">
+                        <div class="card-more">
+                            <h1 class="corner-not">Not Responsive</h1>
+                            <img src="img/in.png" alt="Intinsity  " style="width:100%">
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 col-xs-12">
+                    <a href="https://tamaa011.github.io/jhood.github.io/" target="_blank">
+                        <div class="card-more">
+                            <h1 class="corner-not">Not Responsive</h1>
+                            <img src="img/jhood.png" alt="jhood  " style="width:100%">
+                        </div>
+                    </a>
                 </div>
             </div>
+        </div>
+                </div>
+            </div>
+
     </section>
     <section class="cv hidden hidden-xs wow slideInRight" data-wow-duration="1s">
         <h1 class="m-s">CV</h1>
