--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
         </div>
     </section>
     <section class="work-examples hidden wow slideInRight" data-wow-duration="1s">
+        <div class="container-fluid">
             <h1 class="m">Work Examples</h1>
-            <h3 class="m">As a front-end web developer, I developed 17 websites many of them are responsive with all screens and dynamic website </h3>
+            <h4 class="m">As a front-end web developer, I developed 17 websites many of them are responsive with all screens and dynamic website </h4>
             <div class="work">
                 <div class="row">
                     <div class="col-md-6 col-xs-12">
@@ -167,9 +168,8 @@
                           <p><a href="https://tamaa011.github.io/temp.github.io/" target="_blank"><button>Visit Website</button></a></p>
                         </div>
                     </div>
-        <div class="more">
+            <div class="more">
             <h1 class="m text-center">More Websites</h1>
-            <div class="row">
                 <div class="col-md-6 col-xs-12">
                     <a href="https://ramysabry22.github.io/PortfolioWebsite.github.io/" target="_blank">
                         <div class="card-more">
@@ -234,11 +234,11 @@
                         </div>
                     </a>
                 </div>
-            </div>
         </div>
+                        
                 </div>
             </div>
-
+</div>
     </section>
     <section class="cv hidden hidden-xs wow slideInRight" data-wow-duration="1s">
         <h1 class="m-s">CV</h1>
