--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#" class="me">About Me</a></li>
         <li><a href="#" class="work">Projects</a></li>
-          <li><a href="#" class="cv-cv hidden-xs">CV</a></li>
+          <li><a href="#" class="cv-cv">CV</a></li>
           <li><a href="#" class="contact-c">Contact</a></li>
       </ul>
     </div>
@@ -240,11 +240,164 @@
             </div>
 </div>
     </section>
-    <section class="cv hidden hidden-xs wow slideInRight" data-wow-duration="1s">
-        <h1 class="m-s">CV</h1>
-        <object data='cv/Ramy_Sabry_iOS_Developer_CV.pdf' width="98%" height="650px;" id="object">
-            <p>Oops! Your browser doesn't support PDFs!</p>
-        </object>
+    <section class="cv hidden wow slideInRight" data-wow-duration="1s">
+ <div class="container-fluid">
+            <h1 class="m">Resume</h1>
+            <div class="res">
+                <div class="row">
+                    <div class="col-md-6 col-xs-12">
+                        <div class="card-cv">
+                    <h2>Work History</h2>
+                    <hr>
+                    <h3>Front-End Developer</h3>
+                    <i class="fas fa-calendar-alt"></i> <span>3 Years</span>
+                    <ul class="list">
+                        <li>Developing Websites Static and Dynamic. </li>
+                    </ul>
+                    <h3>Technical Support– Full Time </h3>
+                    <h4>Smart Computing</h4>
+                    <i class="fas fa-calendar-alt"></i> <span> January 2019 – April 2020 </span>
+                    <ul class="list">
+                        <li>Identifying hardware and software solutions.</li>
+                        <li>Troubleshooting technical issues.</li>
+                        <li>Diagnosing and repairing faults.</li>
+                        <li>Installing and configuring hardware and software.</li>
+                        <li>Testing and evaluating new technologies.</li>
+                        <li>Replacing the necessary parts.</li>
+                    </ul>
+                    <h3>IT Help Desk Training at International Company  </h3>
+                    <h4>Archirodon Contraction (Overseas)</h4>
+                    <i class="fas fa-calendar-alt"></i> <span> June 2017 – August 2017  </span>
+                    <ul class="list">
+                        <li>Identifying hardware and software solutions.</li>
+                        <li>Troubleshooting technical issues.</li>
+                        <li>Installing and configuring hardware and software.</li>
+                    </ul>
+                    <h2>Education</h2>
+                    <hr>
+                    <h3>Bachelor degree in Business Administration</h3>
+                    <h4>Ahram Canadian University</h4>
+                    <h5>Major Marketing </h5>
+                    <i class="fas fa-calendar-alt"></i> <span> 2016 – 2020  </span>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xs-12">
+                        <div class="card-cv">
+                            <h2>Coding Skills</h2>
+                            <hr>
+                            <h4>HTML</h4>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped active" role="progressbar"
+                              aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                                <p class="bar-p">100%</p>
+                              </div>
+                            </div>
+                            <h4>CSS</h4>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped active" role="progressbar"
+                              aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                                <p class="bar-p">100%</p>
+                              </div>
+                            </div>
+                            <h4>JavaScript</h4>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:90%">
+                                <p class="bar-p">90%</p>
+                              </div>
+                            </div>
+                            <h4>jQuery</h4>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:90%">
+                                <p class="bar-p">90%</p>
+                              </div>
+                            </div>
+                            <h4>Bootstrap</h4>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped active" role="progressbar"
+                              aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                                <p class="bar-p">90%</p>
+                              </div>
+                            </div>
+                            <h4>WordPress</h4>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped active" role="progressbar"
+                              aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                <p class="bar-p">70%</p>
+                              </div>
+                            </div>
+                            <h4>AJAX</h4>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:70%">
+                                <p class="bar-p">70%</p>
+                              </div>
+                            </div>
+                            <h4>JSON</h4>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:60%">
+                                <p class="bar-p">60%</p>
+                              </div>
+                            </div>
+                            <h4>Node.js </h4>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:60%">
+                                <p class="bar-p">60%</p>
+                              </div>
+                            </div>
+                            <h4>Version control (Git/GitFlow) </h4>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%">
+                                <p class="bar-p">100%</p>
+                              </div>
+                            </div>
+                            <h4>Adobe Photoshop </h4>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:60%">
+                                <p class="bar-p">60%</p>
+                              </div>
+                            </div>
+                            <h4>Adobe XD </h4>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:60%">
+                                <p class="bar-p">60%</p>
+                              </div>
+                            </div>
+                            <h4>Adobe Illustrator  </h4>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:60%">
+                                <p class="bar-p">60%</p>
+                              </div>
+                            </div>
+                            <h4>Computer Skills </h4>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:90%">
+                                <p class="bar-p">90%</p>
+                              </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-xs-12">
+                        <div class="card-cv">
+                    <h2>Strengths</h2>
+                    <hr>
+                    <ul class="list-st">
+                        <li>Leadership</li>
+                        <li>Innovative </li>
+                        <li>Self-Motivated </li>
+                        <li>Self Organized </li>
+                        <li>Smart working </li>
+                        <li>Provlem Solving </li>
+                        <li>High Quality </li>
+                        <li>UX </li>
+                        <li>Clean Code  </li>
+                        <li>Technical research   </li>
+                    </ul>
+                        </div>
+                    </div>
+                        
+                </div>
+            </div>
+</div>
     </section>
     <section class="contact hidden wow slideInRight" data-wow-duration="1s">
         <h1 class="m">Contact</h1>
@@ -255,11 +408,11 @@
                 </div>
                 <div class="col-md-4 col-xl-4 col-xs-12 card">
                     <i class="fas fa-phone"></i>
-                    <h2>+2 01158788066</h2>
+                    <h2>+2 01143327612</h2>
                 </div>
                 <div class="col-md-4 col-xl-4 col-xs-12 card">
                     <i class="far fa-envelope"></i>
-                    <h2 class="p-edit">ramysabry1996@gmail.com</h2>
+                    <h2 class="p-edit">mtamaaa@gmail.com</h2>
                 </div>
         </div>
     </section>
