--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CV</title>
+	<title>Mohamed Tamaa Resume</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width , initial=1">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -36,7 +36,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#" class="me">About Me</a></li>
         <li><a href="#" class="work">Projects</a></li>
-          <li><a href="#" class="cv-cv">CV</a></li>
+          <li><a href="#" class="cv-cv">Resume</a></li>
           <li><a href="#" class="contact-c">Contact</a></li>
       </ul>
     </div>
@@ -48,7 +48,7 @@
                 <hr>
                <a href="#" class="work"><i class="fas fa-briefcase"></i><p>Projects</p> </a>
                 <hr>
-              <a href="#" class="cv-cv hidden-xs"><i class="fas fa-graduation-cap"></i><p>CV</p></a>
+              <a href="#" class="cv-cv hidden-xs"><i class="fas fa-graduation-cap"></i><p>Resume</p></a>
                 <hr class="hr">
               <a href="#" class="contact-c"><i class="far fa-envelope"></i><p>Contact</p></a>
                 <hr>
@@ -391,6 +391,7 @@
                         <li>UX </li>
                         <li>Clean Code  </li>
                         <li>Technical research   </li>
+                        <li>Time Management   </li>
                     </ul>
                         </div>
                     </div>
