--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </section>
 
     <section class="main">
-        <div class="main-page wow slideInRight" data-wow-duration="1s">
+        <div class="main-page " data-wow-duration="1s">
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 col-xl-5 pic">
@@ -90,10 +90,10 @@
             </div>
         </div>
     </section>
-    <section class="work-examples hidden wow slideInRight" data-wow-duration="1s">
+    <section class="work-examples hidden ">
         <div class="container-fluid">
-            <h1 class="m">Work Examples</h1>
-            <h4 class="m">As a front-end web developer, I developed 17 websites many of them are responsive with all screens and dynamic website </h4>
+                <h1 class="m">Work Examples</h1>
+                <h4 class="m">As a front-end web developer, I developed 17 websites many of them are responsive with all screens and dynamic website </h4>        
             <div class="work">
                 <div class="row">
                     <div class="col-md-6 col-xs-12">
@@ -240,7 +240,7 @@
             </div>
 </div>
     </section>
-    <section class="cv hidden wow slideInRight" data-wow-duration="1s">
+    <section class="cv hidden">
  <div class="container-fluid">
             <h1 class="m">Resume</h1>
             <div class="res">
@@ -287,7 +287,7 @@
                             <hr>
                             <h4>HTML</h4>
                             <div class="progress">
-                              <div class="progress-bar progress-bar-striped active" role="progressbar"
+                              <div  class="progress-bar progress-bar-striped active" role="progressbar"
                               aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
                                 <p class="bar-p">100%</p>
                               </div>
