--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#" class="me">About Me</a></li>
-        <li><a href="#" class="work">Projects</a></li>
+        <li><a href="#" class="works">Projects</a></li>
           <li><a href="#" class="cv-cv">Resume</a></li>
           <li><a href="#" class="contact-c">Contact</a></li>
       </ul>
@@ -46,9 +46,9 @@
             <div class="first-side">
             <a href="#" class="me"><i class=" active fas fa-user-alt"></i><p>About Me</p></a> 
                 <hr>
-               <a href="#" class="work"><i class="fas fa-briefcase"></i><p>Projects</p> </a>
+               <a href="#" class="works"><i class="fas fa-briefcase"></i><p>Projects</p> </a>
                 <hr>
-              <a href="#" class="cv-cv hidden-xs"><i class="fas fa-graduation-cap"></i><p>Resume</p></a>
+              <a href="#" class="cv-cv"><i class="fas fa-graduation-cap"></i><p>Resume</p></a>
                 <hr class="hr">
               <a href="#" class="contact-c"><i class="far fa-envelope"></i><p>Contact</p></a>
                 <hr>
@@ -70,13 +70,13 @@
     </section>
 
     <section class="main">
-        <div class="main-page " data-wow-duration="1s">
+        <div class="main-page wow fadeIn" data-wow-duration="1s">
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 col-xl-5 pic">
                         <img src="img/IMG_5824.JPG"/>
                     </div>
-                    <div class="col-md-4 text" >
+                    <div class="col-md-4 text">
                         <h4 id="text-one">Front-End Developer</h4>
                         <h4 id="text-two" class="hidden">Web Designer</h4>
                         <h1>Mohamed Tamaa</h1>
@@ -90,10 +90,10 @@
             </div>
         </div>
     </section>
-    <section class="work-examples hidden ">
+    <section class="work-examples hidden wow slideInRight" data-wow-duration="1s">
         <div class="container-fluid">
-                <h1 class="m">Work Examples</h1>
-                <h4 class="m">As a front-end web developer, I developed 17 websites many of them are responsive with all screens and dynamic website </h4>        
+            <h1 class="m">Work Examples</h1>
+            <h4 class="m">As a front-end web developer, I developed 17 websites many of them are responsive with all screens and dynamic website </h4>
             <div class="work">
                 <div class="row">
                     <div class="col-md-6 col-xs-12">
@@ -240,7 +240,7 @@
             </div>
 </div>
     </section>
-    <section class="cv hidden">
+    <section class="cv hidden wow bounce" data-wow-duration="1s">
  <div class="container-fluid">
             <h1 class="m">Resume</h1>
             <div class="res">
@@ -287,7 +287,7 @@
                             <hr>
                             <h4>HTML</h4>
                             <div class="progress">
-                              <div  class="progress-bar progress-bar-striped active" role="progressbar"
+                              <div class="progress-bar progress-bar-striped active" role="progressbar"
                               aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
                                 <p class="bar-p">100%</p>
                               </div>
@@ -400,7 +400,7 @@
             </div>
 </div>
     </section>
-    <section class="contact hidden wow slideInRight" data-wow-duration="1s">
+    <section class="contact hidden wow headShake" data-wow-duration="1s">
         <h1 class="m">Contact</h1>
         <div class="row edit">
                 <div class="col-md-4 col-xl-4 col-xs-12 card">
