--- a/index.html
+++ b/index.html
@@ -299,6 +299,13 @@
                                 <p class="bar-p">100%</p>
                               </div>
                             </div>
+                            <h4>SASS</h4>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped active" role="progressbar"
+                              aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                                <p class="bar-p">90%</p>
+                              </div>
+                            </div>
                             <h4>JavaScript</h4>
                             <div class="progress">
                               <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:90%">
